Ajuste no pom.xml